Added Role Schema and updated UserSchema to automatically populate role & permissions fields for user after roleId is modified (added or updated)
